# inference-profiler

inference-perf-lab/: .gitignore  README.md  pyproject.toml
inference-perf-lab/src/perflab/: bench.py  cli.py  env.py  metrics.py  models.py  preprocess.py  recommend.py  report.py  sweep.py  timing.py  utils.py
inference-perf-lab/tests/: test_metrics.py  test_recommend.py
reports/: test.md
results/: runs.jsonl  test_sweep.jsonl
results/sweeps/: 20260131_221520_cpu_text.jsonl
